--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "ouroboros"
+name = "ouroboros_examples"
 version = "0.1.0"
 authors = ["Joshua Maros <joshua-maros@github.com>"]
 edition = "2018"
 
 [dependencies]
-ouroboros_macro = { path = "../ouroboros_macro" }
+ouroboros = { path = "../ouroboros" }
