--- a/ouroboros/Cargo.toml
+++ b/ouroboros/Cargo.toml
@@ -3,6 +3,7 @@ name = "ouroboros"
 version = "0.1.0"
 authors = ["Joshua Maros <joshua-maros@github.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 ouroboros_macro = { path = "../ouroboros_macro" }
