--- a/ouroboros_macro/Cargo.toml
+++ b/ouroboros_macro/Cargo.toml
@@ -3,6 +3,7 @@ name = "ouroboros_macro"
 version = "0.1.0"
 authors = ["Joshua Maros <joshua-maros@github.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [lib]
 proc-macro = true
