--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "ouroboros_examples"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Joshua Maros <joshua-maros@github.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 description = "Examples for the ouroboros crate."
+documentation = "https://docs.rs/ouroboros_examples"
+repository = "https://github.com/joshua-maros/ouroboros"
+
+[lib]
 
 [dependencies]
 ouroboros = { version = "0.1", path = "../ouroboros" }
