--- a/ouroboros/Cargo.toml
+++ b/ouroboros/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "ouroboros"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Joshua Maros <joshua-maros@github.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 description = "Easy, safe self-referential struct generation."
+readme = "../README.md"
+documentation = "https://docs.rs/ouroboros"
+repository = "https://github.com/joshua-maros/ouroboros"
 
 [dependencies]
 ouroboros_macro = { version = "0.1", path = "../ouroboros_macro" }
