--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -26,6 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup MIRI-Compatible Toolchain
+        working-directory: examples
         run: |
           MIRI_NIGHTLY=nightly-$(curl -s https://rust-lang.github.io/rustup-components-history/x86_64-unknown-linux-gnu/miri)
           echo "Installing latest nightly with Miri: $MIRI_NIGHTLY"
