--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -23,3 +23,4 @@ ouroboros = { version = "0.8.0", path = "../ouroboros" }
 
 [dev-dependencies]
 trybuild = "1.0"
+tokio = { version = "1", features = [ "macros", "rt" ] }
