--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -20,6 +20,7 @@ miri = []
 
 [dependencies]
 ouroboros = { version = "0.8.3", path = "../ouroboros" }
+stable_deref_trait = "1.2"
 
 [dev-dependencies]
 trybuild = "1.0"
