--- a/ouroboros_macro/Cargo.toml
+++ b/ouroboros_macro/Cargo.toml
@@ -17,3 +17,6 @@ proc-macro2 = "1.0"
 proc-macro-error = "1.0.4"
 quote = "1.0"
 syn = { version = "1.0", features = ["full"] }
+
+[features]
+std = []
