--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -17,10 +17,12 @@ rustdoc-args = ["--document-private-items"]
 default = []
 # Disables any tests that are not compatible or not intended to run under Miri
 miri = []
+__tokio = ["tokio"]
 
 [dependencies]
 ouroboros = { version = "0.15.2", path = "../ouroboros" }
+tokio = { version = "1", features = [ "macros", "rt" ], optional = true }
 
 [dev-dependencies]
+rustversion = "1.0"
 trybuild = "1.0"
-tokio = { version = "1", features = [ "macros", "rt" ] }
