--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -21,8 +21,8 @@ __tokio = ["tokio"]
 
 [dependencies]
 ouroboros = { version = "0.15.7", path = "../ouroboros" }
-tokio = { version = "1", features = [ "macros", "rt" ], optional = true }
+tokio = { version = "1.25.0", features = [ "macros", "rt" ], optional = true }
 
 [dev-dependencies]
-rustversion = "1.0"
-trybuild = "1.0"
+rustversion = "1.0.11"
+trybuild = "=1.0.50"
