--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -17,11 +17,12 @@ rustdoc-args = ["--document-private-items"]
 default = []
 # Disables any tests that are not compatible or not intended to run under Miri
 miri = []
-__tokio = ["tokio"]
+std = []
+__tokio = ["tokio", "std"]
 
 [dependencies]
 ouroboros = { version = "0.15.7", path = "../ouroboros" }
-tokio = { version = "1.25.0", features = [ "macros", "rt" ], optional = true }
+tokio = { version = "1.27.0", features = [ "macros", "rt" ], optional = true }
 
 [dev-dependencies]
 rustversion = "1.0.11"
