--- a/ouroboros/Cargo.toml
+++ b/ouroboros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ouroboros"
-version = "0.15.7"
+version = "0.16.0"
 authors = ["Joshua Maros <joshua-maros@github.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -11,7 +11,8 @@ repository = "https://github.com/joshua-maros/ouroboros"
 
 [dependencies]
 aliasable = "0.1.3"
-ouroboros_macro = { version = "0.15.7", path = "../ouroboros_macro" }
+ouroboros_macro = { version = "0.16.0", path = "../ouroboros_macro" }
+static_assertions = "1.1.0"
 
 [features]
 default = ["std"]
