--- a/ouroboros_macro/Cargo.toml
+++ b/ouroboros_macro/Cargo.toml
@@ -15,7 +15,7 @@ proc-macro = true
 heck = "0.4.1"
 itertools = "0.12.0"
 proc-macro2 = "1.0"
-proc-macro-error = "1.0.4"
+proc-macro2-diagnostics = "0.10"
 quote = "1.0"
 syn = { version = "2.0", features = ["full"] }
 
