--- a/ouroboros/Cargo.toml
+++ b/ouroboros/Cargo.toml
@@ -10,7 +10,7 @@ documentation = "https://docs.rs/ouroboros"
 repository = "https://github.com/someguynamedjosh/ouroboros"
 
 [dependencies]
-aliasable = "0.1.3"
+aliasable = { version = "0.1.3", features = ["traits"] }
 ouroboros_macro = { version = "0.18.4", path = "../ouroboros_macro" }
 static_assertions = "1.1.0"
 
